Bug 53616 - [softpipe] sp_state_derived.c:308:update_polygon_stipple_enable: Assertion `unit >= softpipe->num_samplers[1]' failed.
Summary: [softpipe] sp_state_derived.c:308:update_polygon_stipple_enable: Assertion `u...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-16 23:51 UTC by Vinson Lee
Modified: 2012-08-17 15:09 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-08-16 23:51:06 UTC
mesa: 81ba2c53b698b3926e71dd37e7898719fd2deb3e (master)

Run glean paths on softpipe

$ ./bin/glean -r results -t paths --quick
sp_state_derived.c:308:update_polygon_stipple_enable: Assertion `unit >= softpipe->num_samplers[1]' failed.

(gdb) bt
#0  _debug_assert_fail (expr=<optimized out>, file=<optimized out>, line=<optimized out>, function=<optimized out>) at util/u_debug.c:281
#1  0x00007fdcdf2ae1b0 in update_polygon_stipple_enable (prim=4, softpipe=0x1e029c0) at sp_state_derived.c:308
#2  softpipe_update_derived (softpipe=0x1e029c0, prim=4) at sp_state_derived.c:354
#3  0x00007fdcdf2a2536 in softpipe_draw_vbo (pipe=0x1e029c0, info=0x7fff611e8e50) at sp_draw_arrays.c:73
#4  0x00007fdcdf3692b7 in st_draw_vbo (ctx=0x1f0f7c0, prims=0x1f8713c, nr_prims=1, ib=0x0, index_bounds_valid=<optimized out>, min_index=0, max_index=3, tfb_vertcount=0x0)
    at ../../src/mesa/state_tracker/st_draw.c:265
#5  0x00007fdcdf444885 in vbo_exec_vtx_flush (exec=0x1f868a8, keepUnmapped=1 '\001') at ../../src/mesa/vbo/vbo_exec_draw.c:409
#6  0x00007fdcdf43846c in vbo_exec_FlushVertices_internal (exec=0x1f868a8, unmap=<optimized out>) at ../../src/mesa/vbo/vbo_exec_api.c:539
#7  0x00007fdcdf4419b8 in vbo_exec_FlushVertices (ctx=0x1f0f7c0, flags=<optimized out>) at ../../src/mesa/vbo/vbo_exec_api.c:1296
#8  0x00007fdcdf40d9c6 in _mesa_set_enable (ctx=0x1f0f7c0, cap=2882, state=0 '\000') at ../../src/mesa/main/enable.c:554
#9  0x00000000004d186f in GLEAN::PathsTest::SetPathState (this=0x79f160, path=GLEAN::PathsTest::STIPPLE, state=GLEAN::PathsTest::DISABLE)
    at piglit/tests/glean/tpaths.cpp:161
#10 0x00000000004d21f9 in GLEAN::PathsTest::runOne (this=0x79f160, r=...) at piglit/tests/glean/tpaths.cpp:338
#11 0x000000000049a276 in GLEAN::BaseTest<GLEAN::BasicResult>::run (this=0x79f160, environment=...) at piglit/tests/glean/tbase.h:337
#12 0x000000000048f93c in main (argc=7, argv=0x7fff611ea4a8) at piglit/tests/glean/main.cpp:141
(gdb) frame 1
#1  0x00007fdcdf2ae1b0 in update_polygon_stipple_enable (prim=4, softpipe=0x1e029c0) at sp_state_derived.c:308
308	      assert(unit >= softpipe->num_samplers[PIPE_SHADER_FRAGMENT]);
(gdb) print unit
$1 = 0
(gdb) print softpipe->num_samplers
$2 = {0, 1, 0, 0}


The first bad commit could be any of:
25a42f39e362322dbac836c29b76b3104bbfe6f4
348ac08bfdc0741e8b2e14a747e2299c49771ece
c969cb1447a0dc0da3cd8016f3e86dcfb381643f
0ad95b923a2bfd91677872765946b6a2f8d11260
bd3733c0be174f947dd729e5fd987ea3a9566c27
f3c3aff6efed49b7740a144f767c713cb22561e2
f3cc4990a090ee076d8217c83aaf16e036e66686
6c8a13215813841703e7c2efa233e8d4cf517dfd
d4ab8bd0955f1b114acee80f17a2e82c7129cc1a
109e87dc6aed1ad42d36b3757accbb7e79401bce
cab2fed135bc1edf7b65ddca3236020638427061
10e552d056dd080c4e763a31df517c2d7684a9cf
a2c1df4c9a7375bc5306e8cfd07a9f7087759a96
bef196c7929606bb8c7e9c06fe83a90fc0d95f09
d663a557fd27d7c238248e19f22f2e6b05f03030
df87fb59136eb302d72eac4b58fd8ffb25989ed5
f6b7157550205a0633b4c2cb49a807d581176e21
0d308ef8feb081bedd12e01b270278e5f0de8e5a
We cannot bisect more!
bisect run cannot continue any more
Comment 1 Brian Paul 2012-08-17 15:09:15 UTC
The assertion is invalid and I've removed it in commit f69273f9522a0c1486cf1870e35b3a16516f7233


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.